# xray-vision

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE_NEXT_LAYERS.md  README.md  mypy.ini  pyproject.toml  pyrightconfig.json  ruff.toml  spec.md  tasks.md
Planning/: 00_ORDER_OF_IMPLEMENTATION.md  README.md  hysteresis_store_compaction_plan.md  hysteresis_time_gap_reset_plan.md  orchestrator_buffer_pruning_plan.md
Planning/composer/: composer_belief_planning_doc.md  spec.md  tasks.md
Planning/composer_analysis_logic_v1/: spec.md  tasks.md
Planning/composer_orchestrator_snapshot_flow_v1/: spec.md  tasks.md
Planning/composer_to_regime_engine/: spec.md  tasks.md
Planning/evidence-matrix/: evidence-matrix-plan.md  interpreter_next_iteration.md  matrix_definition_and_interpreter_update.md  phase2.md  phase3.md  replay_harness.md
Planning/market_data/: spec.md  tasks.md
Planning/orchestrator/: spec.md  tasks.md
Planning/regime_engine/: belief_refoundation.md  spec.md  tasks.md
Planning/regime_engine_state_persistence_v1/: spec.md  tasks.md
configs/: default.yaml
src/composer/: AGENTS.md  CONTRACT_FREEZE.md  __init__.py  composer.py  observability.py
src/market_data/: AGENTS.md  CONTRACT_FREEZE.md  VERSIONING.md  __init__.py  adapter.py  config.py  contracts.py  decoder.py  observability.py  pipeline.py  runtime.py  runtime_config.py  serialization.py  sink.py
src/orchestrator/: AGENTS.md  CONTRACT_FREEZE.md  VERSIONING.md  __init__.py  buffer.py  config.py  contracts.py  cuts.py  engine_runner.py  failure_handling.py  lifecycle.py  observability.py  (+9 more)
(+262 files in other folders)
