[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xray-vision"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = ["PyYAML>=6"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
